# Contact-Book

./: .gitignore  REST_API.py  app.py  notes.txt  pubspec.yaml  pyproject.toml  readME.md  requirements.txt
android/app/: build.gradle
contact_book_app/: README.md  pubspec.yaml
contact_book_app/android/app/: build.gradle
contact_book_app/ios/Runner/: Info.plist
contact_book_app/ios/Runner.xcodeproj/: project.pbxproj
contact_book_app/lib/: main.dart
contact_book_app/lib/controller/: main_page_controller.dart  profile_page.dart
contact_book_app/lib/controllers/: main_page_controller.dart
contact_book_app/lib/model/: main_page_model.dart  user.dart
contact_book_app/lib/models/: main_page_model.dart
contact_book_app/lib/utils/: user_preferences.dart
contact_book_app/lib/views/: homepage.dart  onboardscreens.dart
contact_book_app/lib/widgets/: appbar_widget.dart  button_widget.dart  (+1 more)
contact_book_app/linux/: CMakeLists.txt  my_application.cc
contact_book_app/test/: widget_test.dart
contact_book_app/web/: index.html  manifest.json
contact_book_app/windows/: CMakeLists.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: contact.dart
lib/services/: contact_service.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
services/: contact_service.dart
single_user_contacts_page/: pubspec.yaml
single_user_contacts_page/lib/: main.dart
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+17 files in other folders)
