[tool.poetry]
name = "contact-book"
version = "0.1.0"
description = ""
authors = ["Tejaswini <tejaswinithota83@gmail.com~>"]
readme = "README.md"
packages = [{include = "contact_book"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-restful = "^0.3.9"
flask-pymongo = "^2.3.0"
sqlalchemy = "^2.0.13"
flask-sqlalchemy = "^3.0.3"
mongoengine = "^0.27.0"
flask-mongoengine = "^1.0.0"
certifi = "^2023.5.7"
flask-marshmallow = "^0.15.0"
marshmallow-sqlalchemy = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
